# ygo_engine

./: .gitignore  README.md  constants.py  dev.sh  game_state_visualiser.py  logic_engine.py  requirements.txt  run-client.sh  run-server.sh  run_download_card_db.py  utils.py  yugioh_engine.py
core/: actions.py  (+4 more)
engine/: pyproject.toml
engine/scripts/: build_card_db.py  download_card_images.py  fuzz_selfplay.py  ygopro_ref.py
engine/tests/: test_attack_fx.py  test_audit_fixes_batch.py  test_banlist.py  test_card_pool.py  test_chain.py  test_deckbuild.py  test_draw_trigger.py  test_effect_damage_window.py  test_effects.py  test_effects_activation_lock_batch.py  test_effects_archetype_anthem_batch.py  test_effects_assailant_batch.py  test_effects_attack_control_batch.py  test_effects_attack_lock_batch.py  test_effects_attack_redirect_batch.py  test_effects_attack_target_batch.py  test_effects_attack_target_protection_batch.py  test_effects_attack_traps_batch.py  test_effects_attack_twice_batch.py  test_effects_attribute_anthem_batch.py  test_effects_banish_batch.py  test_effects_banish_from_gy_cost_batch.py  test_effects_batch100.py  test_effects_batch101.py  test_effects_batch102.py  test_effects_batch103.py  test_effects_batch104.py  test_effects_batch105.py  test_effects_batch106.py  test_effects_batch107.py  test_effects_batch108.py  test_effects_batch109.py  test_effects_batch110.py  test_effects_batch111.py  test_effects_batch112.py  test_effects_batch113.py  test_effects_batch114.py  test_effects_batch115.py  test_effects_batch116.py  test_effects_batch117.py  (+130 more)
(+462 files in other folders)
